Fixed some layout problems

--- a/css/style.css
+++ b/css/style.css
@@ -56,8 +56,7 @@ h1 {
 }
 
 .state-one ul {
-  float: right;
-  position: fixed;
+  display: inline-block;
   font-size: 24px;
   margin-left: 14em;
 }
@@ -81,7 +80,7 @@ button#submit {
   display: inline-block;
   font-size: 24px;
   font-family: 'Papyrus';
-  margin: 10em auto;
+  margin: 4em auto;
   margin-left: 15em;
   width: 5em;
   height: 2em;
